--- a/toaster/layout.html
+++ b/toaster/layout.html
@@ -62,7 +62,7 @@
   content: "";
   border-right: 1px solid;
   /* DSS-13861: The minifier doesn't like layout vars for colors in shorthand */
-  border-right-color: {{pipe_color}};
+  border-right-color: {{pipe-color}};
   height: 40px;
   float: right;
   position: relative;
@@ -97,7 +97,7 @@
 }
 
 .met-toast-right div:first-child {
-  color:{{title_color}};
+  color:{{title-color}};
 }
 
 .met-toast-right div:last-child {
