--- a/toaster/layout.html
+++ b/toaster/layout.html
@@ -1,13 +1,14 @@
 <style>
-.met-toast {
+.met-rule-${i} {
   height: 104px;
   width: 100%;
   padding: 24px 40px;
   max-width: 1200px;
   text-align: center;
-  font: 400 18px/24px {{font}}, Arial, sans-serif;
+  font: 400 18px/24px ${font}, Arial, sans-serif;
   box-sizing: border-box;
-  background-color: {{background-color}};
+  ${bgimage}
+  background-color: ${bgcolor};
   position: fixed;
   bottom: 0;
   left: 0;
@@ -17,13 +18,13 @@
   -webkit-transition: -webkit-transform 375ms cubic-bezier(0.2, 0.84, 0.46, 0.99);
   -moz-transition: -moz-transform 375ms cubic-bezier(0.2, 0.84, 0.46, 0.99);
   transition: transform 375ms cubic-bezier(0.2, 0.84, 0.46, 0.99);
-  z-index: {{zindex}};
+  z-index: ${zindex};
 }
-.met-toast * {
+.met-rule-${i} * {
   font: inherit;
   box-sizing: inherit;
 }
-.met-toast.closed {
+.met-rule-${i}.closed {
   -webkit-transform: translateY(150%);
   -moz-transform: translateY(150%);
   -ms-transform: translateY(150%);
@@ -33,19 +34,19 @@
   -moz-transition: -moz-transform 0.15s linear;
   transition: transform 0.15s linear;
 }
-.met-toast b {
+.met-rule-${i} b {
   font-weight: 700;
 }
-.met-toast mark {
-  color: {{highlight-color}};
+.met-rule-${i} mark {
+  color: ${txcolor};
   background: none;
 }
 .met-toast-left,
 .met-toast-right {
   float: left;
 }
-.met-toast .met-flyout-close,
-.met-toast [data-met-return] {
+.met-rule-${i} .met-flyout-close,
+.met-rule-${i} [data-met-return] {
   float: right;
 }
 .met-toast-left {
@@ -55,13 +56,13 @@
   white-space: nowrap;
   width: 160px;
   letter-spacing: 0px; /* override Arc's reduced space */
-  color: {{tagline-color}};
+  color: ${side_title_color};
 }
 .met-toast-left:before {
   content: "";
   border-right: 1px solid;
   /* DSS-13861: The minifier doesn't like layout vars for colors in shorthand */
-  border-right-color: {{pipe-color}};
+  border-right-color: ${pipe_color};
   height: 40px;
   float: right;
   position: relative;
@@ -73,9 +74,9 @@
   line-height: 24px;
   width: 256px;
 }
-.met-toast [data-met-return] {
-  background-color: {{cta-background-color}};
-  color:{{cta-text-color}};
+.met-rule-${i} [data-met-return] {
+  background-color: ${cta_bg_color};
+  color:${cta_color};
   font-size: 14px;
   line-height: 40px;
   text-decoration: none;
@@ -84,7 +85,7 @@
   white-space: nowrap;
   width: 344px;
 }
-.met-toast .met-flyout-close {
+.met-rule-${i} .met-flyout-close {
     cursor: pointer;
     display: table-cell;
     position: absolute;
@@ -96,47 +97,62 @@
 }
 
 .met-toast-right div:first-child {
-  color:{{title-color}};
+  color:${title_color};
 }
 
 .met-toast-right div:last-child {
-  color:{{description-color}};
+  color:${body_color};
 }
  
-.met-toast .met-flyout-close svg {
+.met-rule-${i} .met-flyout-close svg {
    height: 20px;
 }
      
-.met-toast .met-toast-right {
+.met-toast-varC .met-toast-left,
+.met-toast-varD .met-toast-left,
+.met-toast-varA .met-toast-right div:last-child {
+  display: none;
+}
+.met-toast-varA .met-toast-right {
   text-align: left;
   line-height: 56px;
   padding-top: 0;
 }
-.met-toast .met-toast-right {
+.met-toast-varB .met-toast-right {
   text-align: left;
 }
-
+.met-toast-varC .met-toast-right {
+  width: 416px;
+  padding-left: 0;
+}
+.met-toast-varD .met-toast-right {
+  width: 280px;
+  padding-left: 0;
+}
+.met-toast-varD [data-met-return] {
+  width: 480px;
+} 
       
 @media only screen and (max-width: 839px) {
-  .met-toast {
+  .met-rule-${i} {
     background-image: none;
     padding: 24px 14px;
     /*z-index: 5000001; Commented this whilst zindex dynamic, formerly 30 until an ad started appearing over it */
   }
-  .met-toast [data-met-return] {
+  .met-rule-${i} [data-met-return] {
     width: 96px;
   }
-  .met-toast [data-met-return] {
+  .met-toast-varD [data-met-return] {
     width: 232px;
   }
 
-  .met-toast .met-flyout-close {
+  .met-rule-${i} .met-flyout-close {
     right: 10px;
     top: 5px;
   }
 }
 @media only screen and (max-width: 547px) {
-  .met-toast {
+  .met-rule-${i} {
     display: none;
   }
 }
