--- a/toaster/layout.html
+++ b/toaster/layout.html
@@ -1,14 +1,13 @@
 <style>
-.met-rule-${i} {
-  height: 104px;
+.met-rule-{{i}} {
+   height: 104px;
   width: 100%;
   padding: 24px 40px;
   max-width: 1200px;
   text-align: center;
-  font: 400 18px/24px ${font}, Arial, sans-serif;
+  font: 400 18px/24px {{font}}, Arial, sans-serif;
   box-sizing: border-box;
-  ${bgimage}
-  background-color: ${bgcolor};
+  background-color: {{background-color}};
   position: fixed;
   bottom: 0;
   left: 0;
@@ -18,13 +17,13 @@
   -webkit-transition: -webkit-transform 375ms cubic-bezier(0.2, 0.84, 0.46, 0.99);
   -moz-transition: -moz-transform 375ms cubic-bezier(0.2, 0.84, 0.46, 0.99);
   transition: transform 375ms cubic-bezier(0.2, 0.84, 0.46, 0.99);
-  z-index: ${zindex};
+  z-index: {{zindex}};
 }
-.met-rule-${i} * {
+.met-rule-{{i}} * {
   font: inherit;
   box-sizing: inherit;
 }
-.met-rule-${i}.closed {
+.met-rule-{{i}}.closed {
   -webkit-transform: translateY(150%);
   -moz-transform: translateY(150%);
   -ms-transform: translateY(150%);
@@ -34,35 +33,35 @@
   -moz-transition: -moz-transform 0.15s linear;
   transition: transform 0.15s linear;
 }
-.met-rule-${i} b {
+.met-rule-{{i}} b {
   font-weight: 700;
 }
-.met-rule-${i} mark {
-  color: ${txcolor};
+.met-rule-{{i}} mark {
+  color: {{highlight-color}};
   background: none;
 }
 .met-toast-left,
 .met-toast-right {
   float: left;
 }
-.met-rule-${i} .met-flyout-close,
-.met-rule-${i} [data-met-return] {
+.met-rule-{{i}} .met-flyout-close,
+.met-rule-{{i}} [data-met-return] {
   float: right;
 }
 .met-toast-left {
-  text-align: right;
+   text-align: right;
   padding-right: 20px;
   line-height: 56px;
   white-space: nowrap;
   width: 160px;
   letter-spacing: 0px; /* override Arc's reduced space */
-  color: ${side_title_color};
+  color: {{tagline-color}};
 }
 .met-toast-left:before {
   content: "";
   border-right: 1px solid;
   /* DSS-13861: The minifier doesn't like layout vars for colors in shorthand */
-  border-right-color: ${pipe_color};
+  border-right-color: {{pipe-color}};
   height: 40px;
   float: right;
   position: relative;
@@ -74,9 +73,9 @@
   line-height: 24px;
   width: 256px;
 }
-.met-rule-${i} [data-met-return] {
-  background-color: ${cta_bg_color};
-  color:${cta_color};
+.met-rule-{{i}} [data-met-return] {
+  background-color: {{cta-background-color}};
+  color:{{cta-text-color}};
   font-size: 14px;
   line-height: 40px;
   text-decoration: none;
@@ -85,7 +84,7 @@
   white-space: nowrap;
   width: 344px;
 }
-.met-rule-${i} .met-flyout-close {
+.met-rule-{{i}} .met-flyout-close {
     cursor: pointer;
     display: table-cell;
     position: absolute;
@@ -97,14 +96,14 @@
 }
 
 .met-toast-right div:first-child {
-  color:${title_color};
+   color:{{title-color}};
 }
 
 .met-toast-right div:last-child {
-  color:${body_color};
+  color:{{description-color}};
 }
  
-.met-rule-${i} .met-flyout-close svg {
+.met-rule-{{i}} .met-flyout-close svg {
    height: 20px;
 }
      
@@ -134,30 +133,32 @@
 } 
       
 @media only screen and (max-width: 839px) {
-  .met-rule-${i} {
+  .met-rule-{{i}} {
     background-image: none;
     padding: 24px 14px;
     /*z-index: 5000001; Commented this whilst zindex dynamic, formerly 30 until an ad started appearing over it */
   }
-  .met-rule-${i} [data-met-return] {
+  .met-rule-{{i}} [data-met-return] {
     width: 96px;
   }
   .met-toast-varD [data-met-return] {
     width: 232px;
   }
 
-  .met-rule-${i} .met-flyout-close {
+  .met-rule-{{i}} .met-flyout-close {
     right: 10px;
     top: 5px;
   }
 }
 @media only screen and (max-width: 547px) {
-  .met-rule-${i} {
+  .met-rule-{{i}} {
     display: none;
   }
 }
 </style>
-  <div class="met-toast" role="complementary" aria-labelledby="trialHeading">
+
+<div class="met-flyout-toaster">
+  <div class="met-toast" role="complementary" aria-labelledby="trialHeading" style="background-color:{{background-color}}">
     <a href="#" aria-label="Close" class="met-flyout-close met-visually-hidden"><svg viewBox="0 0 25 32" fill="{{close-button-color}}"><path d="M23.18 23.61q0 .71-.5 1.21l-2.43 2.43q-.5.5-1.21.5t-1.21-.5L12.58 22l-5.25 5.25q-.5.5-1.21.5t-1.21-.5l-2.43-2.43q-.5-.5-.5-1.21t.5-1.21l5.25-5.25-5.25-5.25q-.5-.5-.5-1.21t.5-1.21l2.43-2.43q.5-.5 1.21-.5t1.21.5l5.25 5.25 5.25-5.25q.5-.5 1.21-.5t1.21.5l2.43 2.43q.5.5.5 1.21t-.5 1.21l-5.25 5.25 5.25 5.25q.5.5.5 1.21z"></path></svg>close</a>
     <h2 class="met-toast-left">
        <b>{{tagline}}</b>
@@ -168,6 +169,7 @@
     </div>
     <a href="{{subscribe-url}}" data-met-return><b>{{cta-button}}</b></a>
   </div>
+ </div>
 
 <script>
     (function() {
