--- a/toaster/layout.html
+++ b/toaster/layout.html
@@ -1,6 +1,6 @@
 <style>
-.met-rule-{{i}} {
-   height: 104px;
+.met-toast {
+  height: 104px;
   width: 100%;
   padding: 24px 40px;
   max-width: 1200px;
@@ -19,11 +19,11 @@
   transition: transform 375ms cubic-bezier(0.2, 0.84, 0.46, 0.99);
   z-index: {{zindex}};
 }
-.met-rule-{{i}} * {
+.met-toast * {
   font: inherit;
   box-sizing: inherit;
 }
-.met-rule-{{i}}.closed {
+.met-toast.closed {
   -webkit-transform: translateY(150%);
   -moz-transform: translateY(150%);
   -ms-transform: translateY(150%);
@@ -33,10 +33,10 @@
   -moz-transition: -moz-transform 0.15s linear;
   transition: transform 0.15s linear;
 }
-.met-rule-{{i}} b {
+.met-toast b {
   font-weight: 700;
 }
-.met-rule-{{i}} mark {
+.met-toast mark {
   color: {{highlight-color}};
   background: none;
 }
@@ -44,12 +44,12 @@
 .met-toast-right {
   float: left;
 }
-.met-rule-{{i}} .met-flyout-close,
-.met-rule-{{i}} [data-met-return] {
+.met-toast .met-flyout-close,
+.met-toast [data-met-return] {
   float: right;
 }
 .met-toast-left {
-   text-align: right;
+  text-align: right;
   padding-right: 20px;
   line-height: 56px;
   white-space: nowrap;
@@ -73,7 +73,7 @@
   line-height: 24px;
   width: 256px;
 }
-.met-rule-{{i}} [data-met-return] {
+.met-toast [data-met-return] {
   background-color: {{cta-background-color}};
   color:{{cta-text-color}};
   font-size: 14px;
@@ -84,7 +84,7 @@
   white-space: nowrap;
   width: 344px;
 }
-.met-rule-{{i}} .met-flyout-close {
+.met-toast .met-flyout-close {
     cursor: pointer;
     display: table-cell;
     position: absolute;
@@ -96,67 +96,53 @@
 }
 
 .met-toast-right div:first-child {
-   color:{{title-color}};
+  color:{{title-color}};
 }
 
 .met-toast-right div:last-child {
   color:{{description-color}};
 }
  
-.met-rule-{{i}} .met-flyout-close svg {
+.met-toast .met-flyout-close svg {
    height: 20px;
 }
      
-.met-toast-varC .met-toast-left,
-.met-toast-varD .met-toast-left,
-.met-toast-varA .met-toast-right div:last-child {
-  display: none;
-}
-.met-toast-varA .met-toast-right {
+.met-toast .met-toast-right {
   text-align: left;
   line-height: 56px;
   padding-top: 0;
 }
-.met-toast-varB .met-toast-right {
+.met-toast .met-toast-right {
   text-align: left;
 }
-.met-toast-varC .met-toast-right {
-  width: 416px;
-  padding-left: 0;
-}
-.met-toast-varD .met-toast-right {
-  width: 280px;
-  padding-left: 0;
-}
-.met-toast-varD [data-met-return] {
-  width: 480px;
-} 
+
       
 @media only screen and (max-width: 839px) {
-  .met-rule-{{i}} {
+  .met-toast {
     background-image: none;
     padding: 24px 14px;
     /*z-index: 5000001; Commented this whilst zindex dynamic, formerly 30 until an ad started appearing over it */
   }
-  .met-rule-{{i}} [data-met-return] {
+  .met-toast [data-met-return] {
     width: 96px;
   }
-  .met-toast-varD [data-met-return] {
+  .met-toast [data-met-return] {
     width: 232px;
   }
 
-  .met-rule-{{i}} .met-flyout-close {
+  .met-toast .met-flyout-close {
     right: 10px;
     top: 5px;
   }
 }
 @media only screen and (max-width: 547px) {
-  .met-rule-{{i}} {
+  .met-toast {
     display: none;
   }
 }
 </style>
-  <div class="met-toast" role="complementary" aria-labelledby="trialHeading">
+<div class="met-flyout-toaster">
+  <div class="met-toast" role="complementary" aria-labelledby="trialHeading" style="background-color:{{background-color}}">
     <a href="#" aria-label="Close" class="met-flyout-close met-visually-hidden"><svg viewBox="0 0 25 32" fill="{{close-button-color}}"><path d="M23.18 23.61q0 .71-.5 1.21l-2.43 2.43q-.5.5-1.21.5t-1.21-.5L12.58 22l-5.25 5.25q-.5.5-1.21.5t-1.21-.5l-2.43-2.43q-.5-.5-.5-1.21t.5-1.21l5.25-5.25-5.25-5.25q-.5-.5-.5-1.21t.5-1.21l2.43-2.43q.5-.5 1.21-.5t1.21.5l5.25 5.25 5.25-5.25q.5-.5 1.21-.5t1.21.5l2.43 2.43q.5.5.5 1.21t-.5 1.21l-5.25 5.25 5.25 5.25q.5.5.5 1.21z"></path></svg>close</a>
     <h2 class="met-toast-left">
        <b>{{tagline}}</b>
@@ -167,6 +153,7 @@
     </div>
     <a href="{{subscribe-url}}" data-met-return><b>{{cta-button}}</b></a>
   </div>
+ </div>
 
 <script>
     (function() {
