--- a/toaster/layout.html
+++ b/toaster/layout.html
@@ -7,7 +7,7 @@
   text-align: center;
   font: 400 18px/24px {{font}}, Arial, sans-serif;
   box-sizing: border-box;
-  background-color: {{background-color}};
+  background-color: {{background-color}} !important;
   position: fixed;
   bottom: 0;
   left: 0;
