--- a/toaster/layout.html
+++ b/toaster/layout.html
@@ -70,7 +70,7 @@
 }
 .met-toast-right {
   padding: 4px 0 0 20px;
-  line-height: 24px;
+  line-height: 24px !important;
   width: 256px;
 }
 .met-toast [data-met-return] {
