--- a/toaster/layout.html
+++ b/toaster/layout.html
@@ -54,7 +54,7 @@
   line-height: 56px;
   white-space: nowrap;
   width: 160px;
-  letter-spacing: 0px; /* override Arc's reduced space */
+  letter-spacing: 0px; 
   color: {{tagline-color}};
 }
 .met-toast-left:before {
