--- a/toaster/Footer_Layout.html
+++ b/toaster/Footer_Layout.html
@@ -169,7 +169,7 @@
 	 <a href="{{subscribe-url}}" data-met-return><b>{{cta-button}}</b></a>
 	</div>
 </div>
-<script>
+//<script>
 //	(() => {
 //	let bodyElem = document.querySelector("body");
 //	if(bodyElem){
@@ -187,4 +187,4 @@
   
 //  function dummyMethod(){}
   // needs better logic here
-</script>
+//</script>
