--- a/toaster/Footer_Layout.html
+++ b/toaster/Footer_Layout.html
@@ -170,6 +170,9 @@
 	</div>
 </div>
 <script>
+	 $('.met-flyout-close').click(function() {
+         	console.log('-----Toaster clicked----------')
+        });
 //(() => {
 //	let bodyElem = document.querySelector("body");
 //	if(bodyElem){
