--- a/toaster/Footer_Layout.html
+++ b/toaster/Footer_Layout.html
@@ -171,7 +171,8 @@
 </div>
 <script>
 	 $('.met-flyout-close').click(function() {
-         	console.log('-----Toaster clicked----------')
+         	console.log('-----close button clicked----------');
+		document.querySelector(".met-footer-toast").style.display="none"
         });
 //(() => {
 //	let bodyElem = document.querySelector("body");
