--- a/toaster/Footer_Layout.html
+++ b/toaster/Footer_Layout.html
@@ -170,17 +170,17 @@
 	</div>
 </div>
 <script>
+	(() => {
+		let bodyElem = document.querySelector("body");
+		if(bodyElem){
+			let toasterElem = document.querySelector(".met-footer-toast");
+			document.querySelector("body").appendChild(toasterElem);
+		}
+	})();
 	 $('.met-flyout-close').click(function() {
          	console.log('-----close button clicked----------');
 		document.querySelector(".met-footer-toast").style.display="none"
         });
-//(() => {
-//	let bodyElem = document.querySelector("body");
-//	if(bodyElem){
-//		let toasterElem = document.querySelector(".met-footer-toast");
-//		document.querySelector("body").appendChild(toasterElem);
-//	}
-//})();
 //    (function() {
 //    trb.metering.manager.user.track(function(data) {
 //        var rules = trb.registration.config.get('rules');
